# inverse-source-em

./: .gitignore  LICENSE  README.md  make_1src_dataset.py  make_surrogate_dataset.py  pyproject.toml  requirements.txt  session_context.txt  train_surrogate_models.py
data/classification/: scaler_channel_0.pkl  scaler_channel_1.pkl  scaler_channel_2.pkl  scaler_channel_3.pkl
data/regression_2src/: dataset_2src_fullfield_30obs_20k_scaler_X.pkl  dataset_2src_fullfield_30obs_20k_scaler_Y.pkl
data/regression_3src/: stage_1_scaler_X.pkl  stage_1_scaler_y.pkl  stage_2_scaler_X.pkl  stage_2_scaler_y.pkl  stage_3_scaler_X.pkl  stage_3_scaler_y.pkl  stage_4_scaler_X.pkl  stage_4_scaler_y.pkl  stage_5_scaler_X.pkl  stage_5_scaler_y.pkl  stage_6_scaler_X.pkl  (+5 more)
docs/: index.html  inverse_source_em.html  search.js
models/: training_logs_2src.csv
notebooks/:  regression_2src_evaluation.ipynb   regression_3src_evaluation.ipynb  classification_evaluation.ipynb  physics_vs_surrogate.ipynb  regression_1src_evaluation.ipynb
scripts/: make_1src_dataset.py  make_2src_dataset.py  make_3src_dataset.py  make_classification_dataset.py  make_surrogate_dataset.py  test_make_1src_dataset.py  test_make_2src_dataset.py  test_make_3src_dataset.py  test_make_classification_dataset.py  test_make_surrogate_dataset.py  test_train_1src_model.py  test_train_2src_model.py  test_train_3src_model.py  test_train_classification_model.py  test_train_surrogate_models.py  train_1src_model.py  train_2src_model.py  train_3src_model.py  train_classification_model.py  train_surrogate_models.py
(+91 files in other folders)
